--- a/sections/announcement-bar.liquid
+++ b/sections/announcement-bar.liquid
@@ -40,7 +40,11 @@
 
       <announcement-bar-carousel allow-swipe {% if section.settings.autoplay %}autoplay="{{ section.settings.cycle_speed }}"{% endif %} id="{{ carousel_id }}" class="announcement-bar__carousel">
         {%- for block in section.blocks -%}
-          <p class="prose heading {% if forloop.first %}is-selected{% endif %}" {{ block.shopify_attributes }}>{{- block.settings.text -}}</p>
+          {% if block.settings.link %}
+            <a href="{{ block.settings.link }}"><p class="prose heading {% if forloop.first %}is-selected{% endif %}" {{ block.shopify_attributes }}>{{- block.settings.text -}}</p></a>
+            {% else %}
+            <p class="prose heading {% if forloop.first %}is-selected{% endif %}" {{ block.shopify_attributes }}>{{- block.settings.text -}}</p>
+          {% endif %}
         {%- endfor -%}
       </announcement-bar-carousel>
 
@@ -74,6 +78,11 @@
           "id": "text",
           "label": "t:sections.announcement_bar.blocks.message.text",
           "default": "Announce something here"
+        },
+        {
+        "type": "url",
+        "id": "link",
+        "label": "Link"
         }
       ]
     }
