--- a/snippets/product-rating.liquid
+++ b/snippets/product-rating.liquid
@@ -44,7 +44,7 @@ Supported variables
 -%}
 
 {%- unless hide_rating -%}
-  <a href="{% if request.path != product.url %}{{ product.url }}{% endif %}#shopify-product-reviews" class="rating-badge" title="{{ 'product.rating_count' | t: count: rating_count }}">
+  <a href="{% if request.path != product.url %}{{ product.url }}{% endif %}#shopify-product-reviews" class="rating-badge" title="{{ 'product.metafields.spr.reviews' }}">
     <div class="rating-badge__stars" role="img" aria-label="{{ 'general.rating.info' | t: rating_value: rating_value, rating_max: rating_max }}">
       {%- liquid
         if show_single_star
