--- a/snippets/variant-picker.liquid
+++ b/snippets/variant-picker.liquid
@@ -35,7 +35,7 @@ Supported variables
             # To use this mode every variant must have an attached media
 
             for variant in product.variants
-              unless variant.featured_media
+              unless variant.image
                 assign option_selector_type = 'color'
                 break
               endunless
@@ -44,7 +44,7 @@ Supported variables
         endif
       %}
 
-      <fieldset class="variant-picker__option v-stack gap-2 no-js:hidden">
+      <fieldset class="variant-picker__option v-stack gap-2 no-js:hidden option{{ option.position }}">
         <div class="variant-picker__option-info h-stack justify-between gap-2">
           <div class="h-stack gap-1">
             <legend>{{ option.name }}:</legend>
@@ -108,7 +108,7 @@ Supported variables
             endcase
           -%}
 
-          <div data-option-selector class="variant-picker__option-values {{ list_classes }}">
+          <div data-option-selector class="variant-picker__option-values {{ list_classes }} ">
             {%- for value in option.values -%}
               {% liquid
                 assign selected = false
@@ -120,7 +120,7 @@ Supported variables
                 case option_selector_type
                   when 'variant'
                     assign variant_for_value = product.variants | where: name, value | first
-                    render 'swatch' with 'media', value: value, media: variant_for_value.featured_media, selected: selected, name: name, form: form_id
+                    render 'swatch' with 'media', value: value, media: variant_for_value.featured_image, selected: selected, name: name, form: form_id
                   when 'color'
                     render 'swatch' with 'color', value: value, selected: selected, name: name, form: form_id
                   when 'block'
@@ -129,6 +129,8 @@ Supported variables
                     render 'swatch' with 'block', value: value, selected: selected, name: name, form: form_id, show_color: true
                 endcase
               %}
+                <!-- {{ variant_for_value | json }} -->
+            
             {%- endfor -%}
           </div>
         {%- endif -%}
